--- a/res.html
+++ b/res.html
@@ -1,12 +1,32 @@
 <DOCTYPE html>
-<html>
+<html html="pl">
 <head>
-    <meta>
-    <meta>
-    <meta>
-    <meta>
+   
+    <!-- https://www.youtube.com/watch?v=H7LUUsbpbrg - Strona tworzona na podstawie tego artykułu -->
+   
+    <meta charset="utf-8">
+    <title>RES</title>
+    <link rel="stylesheet" href="res.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400&amp;subset=latin-ext" rel="stylesheet">
+    <meta name="viewport" content="width=devie-width"> <!--OPCJA KTORA UMOŻLIWIA ZUMOWANIE 1:1 DZIEKI CZEMU NIEMUSIMY NA MNIJSZYCH UŻADZENIACH NIC USTWIAĆ -->
+    
 </head>
 <body>
+   
+   <header>
+       <a href="#" title="Go back to homepage">
+           <img src="#" alt="">
+       </a>
+       <nav>
+           <ul>
+               <li><a href="" title="To moje produkty">Features</a></li>
+               <li><a href="" title="Poznaj moje koszty">Pricing</a></li>
+               <li><a href="" title="kilka słow o mnie">About</a></li>
+               <li><a href="" title="Wstań starczy leżenia ">Sing up</a></li>
+           </ul>
+           <button type="button" title="Open menu">Hamburger</button>
+       </nav>
+   </header>
     
 </body>
 </html>
